k8s/apps/patient-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-service
  namespace: apps-dev
spec:
  selector:
    app: patient-service
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
